@@ -342,7 +342,7 @@ static SEXP installAttrib(SEXP vec, SEXP name, SEXP val)
 	}
 	t = s; // record last attribute, if any
     }
-    /* The usual convention is that the caller protects, 
+    /* The usual convention is that the caller protects,
        so this is historical over-cautiousness */
     PROTECT(vec); PROTECT(name); PROTECT(val);
     SEXP s = CONS(val, R_NilValue);
@@ -483,9 +483,11 @@ SEXP attribute_hidden do_comment(SEXP call, SEXP op, SEXP args, SEXP env)
 SEXP classgets(SEXP vec, SEXP klass)
 {
     if (isNull(klass) || isString(klass)) {
-	if (length(klass) <= 0) {
+	int ncl = length(klass);
+	if (ncl <= 0) {
 	    SET_ATTRIB(vec, stripAttrib(R_ClassSymbol, ATTRIB(vec)));
 	    SET_OBJECT(vec, 0);
+            // problems when package building:  UNSET_S4_OBJECT(vec);
 	}
 	else {
 	    /* When data frames were a special data type */
@@ -495,13 +497,12 @@ SEXP classgets(SEXP vec, SEXP klass)
 
 	    /* HOWEVER, it is the way that the object bit gets set/unset */
 
-	    int i;
 	    Rboolean isfactor = FALSE;
 
 	    if (vec == R_NilValue)
 		error(_("attempt to set an attribute on NULL"));
 
-	    for(i = 0; i < length(klass); i++)
+	    for(int i = 0; i < ncl; i++)
 		if(streql(CHAR(STRING_ELT(klass, i)), "factor")) { /* ASCII */
 		    isfactor = TRUE;
 		    break;
@@ -510,9 +511,28 @@ SEXP classgets(SEXP vec, SEXP klass)
 		/* we cannot coerce vec here, so just fail */
 		error(_("adding class \"factor\" to an invalid object"));
 	    }
-
 	    installAttrib(vec, R_ClassSymbol, klass);
 	    SET_OBJECT(vec, 1);
+
+	    if(isMethodsDispatchOn() && ncl == 1) { // isMeth..(): do not act too early
+		SEXP cld = R_getClassDef_R(klass);
+		if(!isNull(cld)) {
+		    PROTECT(cld);
+		    /* More efficient? can we protect? -- rather *assign* in method-ns?
+		       static SEXP oldCl = NULL;
+		       if(!oldCl) oldCl = R_getClassDef("oldClass");
+		       if(!oldCl) oldCl = mkString("oldClass");
+		       PROTECT(oldCl);
+		    */
+		    if(!R_isVirtualClass(cld, R_GlobalEnv) &&
+		       !R_extends(cld, mkString("oldClass"), R_GlobalEnv)) // set S4 bit :
+			// !R_extends(cld, oldCl, R_GlobalEnv)) // set S4 bit :
+
+			SET_S4_OBJECT(vec);
+
+		    UNPROTECT(1); // UNPROTECT(2);
+		}
+	    }
 	}
 	return R_NilValue;
     }
@@ -628,7 +648,7 @@ static SEXP s_dot_S3Class = 0;
 
 static SEXP R_S4_extends_table = 0;
 
- 
+
 static SEXP cache_class(const char *class, SEXP klass)
 {
     if(!R_S4_extends_table) {
@@ -644,7 +664,7 @@ static SEXP cache_class(const char *class, SEXP klass)
     return klass;
 }
 
-static SEXP S4_extends(SEXP klass) 
+static SEXP S4_extends(SEXP klass)
 {
     static SEXP s_extends = 0, s_extendsForS3;
     SEXP e, val; const char *class;
@@ -738,9 +758,9 @@ void InitS3DefaultTypes()
 
 	Type2DefaultClass[type].vector =
 	    createDefaultClass(R_NilValue, part2, part3);
-	Type2DefaultClass[type].matrix = 
+	Type2DefaultClass[type].matrix =
 	    createDefaultClass(mkChar("matrix"), part2, part3);
-	Type2DefaultClass[type].array = 
+	Type2DefaultClass[type].array =
 	    createDefaultClass(mkChar("array"), part2, part3);
 	UNPROTECT(nprotected);
     }
@@ -793,11 +813,11 @@ SEXP attribute_hidden R_data_class2 (SEXP obj)
     }
 }
 
-/* class() : */
+// class() & .cache_class() :
 SEXP attribute_hidden R_do_data_class(SEXP call, SEXP op, SEXP args, SEXP env)
 {
   checkArity(op, args);
-  if(PRIMVAL(op) == 1) {
+  if(PRIMVAL(op) == 1) { // .cache_class() :
       const char *class; SEXP klass;
       check1arg(args, call, "class");
       klass = CAR(args);
@@ -806,6 +826,7 @@ SEXP attribute_hidden R_do_data_class(SEXP call, SEXP op, SEXP args, SEXP env)
       class = translateChar(STRING_ELT(klass, 0));
       return cache_class(class, CADR(args));
   }
+  // class():
   check1arg(args, call, "x");
   return R_data_class(CAR(args), FALSE);
 }
@@ -1026,7 +1047,7 @@ SEXP dimnamesgets(SEXP vec, SEXP val)
 	newval = shallow_duplicate(val);
 	UNPROTECT(1);
 	PROTECT(val = newval);
-    }	
+    }
     if (k != length(val))
 	error(_("length of 'dimnames' [%d] must match that of 'dims' [%d]"),
 	      length(val), k);
@@ -1436,13 +1457,13 @@ SEXP attribute_hidden do_attr(SEXP call, SEXP op, SEXP args, SEXP env)
     return ans;
 }
 
-static void check_slot_assign(SEXP obj, SEXP input, SEXP value, SEXP env) 
+static void check_slot_assign(SEXP obj, SEXP input, SEXP value, SEXP env)
 {
     SEXP valueClass, objClass, e;
 
     valueClass = PROTECT(R_data_class(value, FALSE));
     objClass = PROTECT(R_data_class(obj, FALSE));
-    e = PROTECT(lang4(install("checkAtAssignment"), 
+    e = PROTECT(lang4(install("checkAtAssignment"),
 		      objClass, input, valueClass));
     eval(e, env);
     UNPROTECT(3);
@@ -1467,7 +1488,7 @@ SEXP attribute_hidden do_attrgets(SEXP call, SEXP op, SEXP args, SEXP env)
 	else if(isString(nlist) )
 	    SET_STRING_ELT(input, 0, STRING_ELT(nlist, 0));
 	else {
-	    error(_("invalid type '%s' for slot name"), 
+	    error(_("invalid type '%s' for slot name"),
 		  type2char(TYPEOF(nlist)));
 	    return R_NilValue; /*-Wall*/
 	}
@@ -1708,7 +1729,7 @@ SEXP R_do_slot_assign(SEXP obj, SEXP name, SEXP value) {
     } else {
 	if(isNull(value))		/* Slots, but not attributes, can be NULL.*/
 	    value = pseudo_NULL;	/* Store a special symbol instead. */
-	    
+
 #ifdef _R_ver_le_2_11_x_
 	setAttrib(obj, name, value);
 #else
